--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,11 @@
                         <div class="collapse  {{ 'show' if request.path == '/tambah-absen' }} {{ 'show' if request.path == '/tambah-gaji' }} ms-2" id="add-data-collapse">
                             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                 <li><a href="/tambah-absen" class="nav-link  {{ 'aktif' if request.path == '/tambah-absen' }} link-dark rounded">Tambah Absensi</a></li>
+                                <li><a href="/tambah-izin-batch" class="nav-link {{ 'aktif' if request.path == '/tambah-izin-batch' }} link-dark rounded">Tambah Izin</a></li>
+                                <li><a href="/tambah-lembur-batch" class="nav-link {{ 'aktif' if request.path == '/tambah-izin-jam-batch' }} link-dark rounded">Tambah Lembur</a></li>
+                                <li><a href="/tambah-komplain-batch" class="nav-link {{ 'aktif' if request.path == '/tambah-komplain-batch' }} link-dark rounded">Tambah Komplain</a></li>
                                 <li><a href="/tambah-gaji" class="nav-link {{ 'aktif' if request.path == '/tambah-gaji' }} link-dark rounded">Tambah Gaji</a></li>
+                            
                             </ul>
                         </div>
                     </li>
@@ -93,7 +97,7 @@
                         </a>
                         <div class="collapse ms-2" id="download-data-collapse">
                             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a href="/" class="nav-link link-dark rounded">Download Data Lengkap</a></li>
+                                <li><a href="/download-data-lengkap" class="nav-link link-dark rounded">Download Data Lengkap</a></li>
                                 <li><a href="/download-gaji" class="nav-link link-dark rounded">Download Gaji Karyawan</a></li>
                                 <li><a href="/download-presensi" class="nav-link link-dark rounded">Download Presensi</a></li>
                                 <li><a href="/download-izin" class="nav-link link-dark rounded">Download Izin</a></li>
